--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="library">
                 <div class="options">
                     <div class="library-options nav-option">
-                        <img src="library_icon.png">
+                        <img src="Photos/library_icon.png">
                         <a href="#">Your library</a>
                     </div>
                     <div class="icons">
@@ -58,8 +58,8 @@
         <div class="main-content">
             <div class="sticky-nav">
                 <div class="sticky-nav-icons">
-                    <img src="backward_icon.png">
-                    <img src="forward_icon.png" class="hide">
+                    <img src="Photos/backward_icon.png">
+                    <img src="Photos/forward_icon.png" class="hide">
                 </div>
                 <div class="sticky-nav-options">
                     <button class="badge nav-item hide">Explore Premium</button>
@@ -71,7 +71,7 @@
             <h2>Recently Played</h2>
             <div class="cards-container">
                 <div class="card">
-                    <img src="card1img.jpeg" class="card-img">
+                    <img src="Photos/card1img.jpeg" class="card-img">
                     <p class="card-title">Top 50 - Global</p>
                     <p class="card-info">Your daily updates of the most played tracks...</p>
                 </div>
@@ -79,17 +79,17 @@
             <h2>Trending now near you</h2>
             <div class="cards-container">
                 <div class="card">
-                    <img src="card2img.jpeg" class="card-img">
+                    <img src="Photos/card2img.jpeg" class="card-img">
                     <p class="card-title">Mahiye Jinna Sohna</p>
                     <p class="card-info">Most played in your area...</p>
                 </div>
                 <div class="card">
-                    <img src="card3img.jpeg" class="card-img">
+                    <img src="Photos/card3img.jpeg" class="card-img">
                     <p class="card-title">Mere Paas Tum Ho</p>
                     <p class="card-info">Silent Ocean Track...</p>
                 </div>
                 <div class="card">
-                    <img src="card4img.jpeg" class="card-img">
+                    <img src="Photos/card4img.jpeg" class="card-img">
                     <p class="card-title">Alter Ego Naa Ready</p>
                     <p class="card-info">Your daily updates of the most played tracks...</p>
                 </div>
@@ -97,27 +97,27 @@
             <h2>Featured</h2>
             <div class="cards-container">
                 <div class="card">
-                    <img src="card5img.jpeg" class="card-img">
+                    <img src="Photos/card5img.jpeg" class="card-img">
                     <p class="card-title">Top 50 - Global</p>
                     <p class="card-info">Your daily updates of the most played tracks...</p>
                 </div>
                 <div class="card">
-                    <img src="card6img.jpeg" class="card-img">
+                    <img src="Photos/card6img.jpeg" class="card-img">
                     <p class="card-title">Top 50 - Global</p>
                     <p class="card-info">Your daily updates of the most played tracks...</p>
                 </div>
                 <div class="card">
-                    <img src="card4img.jpeg" class="card-img">
+                    <img src="Photos/card4img.jpeg" class="card-img">
                     <p class="card-title">Top 50 - Global</p>
                     <p class="card-info">Your daily updates of the most played tracks...</p>
                 </div>
                 <div class="card">
-                    <img src="card1img.jpeg" class="card-img">
+                    <img src="Photos/card1img.jpeg" class="card-img">
                     <p class="card-title">Top 50 - Global</p>
                     <p class="card-info">Your daily updates of the most played tracks...</p>
                 </div>
                 <div class="card">
-                    <img src="card3img.jpeg" class="card-img">
+                    <img src="Photos/card3img.jpeg" class="card-img">
                     <p class="card-title">Top 50 - Global</p>
                     <p class="card-info">Your daily updates of the most played tracks...</p>
                 </div>
@@ -128,7 +128,7 @@
         </div>
         <div class="music-player">
             <div class="album">
-                <img src="card4img.jpeg">
+                <img src="Photos/card4img.jpeg">
                 <div class="music-content">
                     <p class="music-name">Daylight</p>
                     <p class="singer">David Kushner</p>
@@ -140,12 +140,12 @@
             </div>
             <div class="player">
                 <div class="player-controls">
-                    <img src="player_icon1.png" class="player-control-icon">
-                    <img src="player_icon2.png" class="player-control-icon">
-                    <img src="player_icon3.png" class="player-control-icon"
+                    <img src="Photos/player_icon1.png" class="player-control-icon">
+                    <img src="Photos/player_icon2.png" class="player-control-icon">
+                    <img src="Photos/player_icon3.png" class="player-control-icon"
                         style="height: 2rem; width: 2rem; opacity: 1;">
-                    <img src="player_icon4.png" class="player-control-icon">
-                    <img src="player_icon5.png" class="player-control-icon">
+                    <img src="Photos/player_icon4.png" class="player-control-icon">
+                    <img src="Photos/player_icon5.png" class="player-control-icon">
                 </div>
                 <div class="playback-bar">
                     <span class="current-time">00:00</span>
